Fixing the text size on the cards because of overflow

--- a/agence-api/public/css/fin.css
+++ b/agence-api/public/css/fin.css
@@ -68,7 +68,7 @@
 
 #flipCard p{
     text-align: center;
-    font-size: 20px;
+    font-size: clamp(16px, 3vw, 24px);
     font-weight: bold;
   }
 
